--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -1,13 +1,9 @@
 .footer {
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
+  height: 80px;
+  /* border-top: 1px solid #eaeaea; */
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.logo {
-  height: 1em;
-  margin: 5px;
+  font-size: 0.7rem;
 }
