--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,15 +19,27 @@ main {
 	align-items: center;
 }
 
-code {
-	background: #fafafa;
-	border-radius: 5px;
-	padding: 0.75rem;
-	font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
+nav {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 0px 25px;
+    margin-top: 15px;
+}
+
+ol {
+    display: flex;
+    justify-content: space-between;
+}
+
+a {
+    color: #0f0f0f;
+    text-decoration: none;
 }
 
 .container {
-	height: 100vh;
+	height: 80vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
