--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,12 @@ body {
 	box-sizing: border-box;
 }
 
+@media screen and (max-width: 700px) {
+    nav {
+        display: none;
+    }    
+}
+
 main {
 	padding: 5rem 0;
 	flex: 1;
