--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,13 @@
 html,
 body {
-	padding: 0;
-	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 * {
-	box-sizing: border-box;
+    padding: 0;
+	margin: 0;
+    box-sizing: border-box;
 }
 
 main {
@@ -19,8 +19,18 @@ main {
 	align-items: center;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+	justify-content: center;
+	min-height: 100vh;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(8,37,66,1) 0%, rgba(18,31,61,0.958420868347339) 100%);
+
+}
+
 .container {
-	height: 80vh;
+	height: 91.5vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
